Fix alignment in header

--- a/style/index.css
+++ b/style/index.css
@@ -154,6 +154,10 @@ footer > * {
 }
 
 @media(max-width: 500px) {
+  header {
+    align-items: center;
+  }
+  
   header nav {
     flex-direction: column;
   }
